@@ -1,0 +1,97 @@
+
+// 7567 = SOLR as vanity number
+
+page {
+
+	headTag = <head profile="http://a9.com/-/spec/opensearch/1.1/">
+
+	headerData.7567 = TEXT
+	headerData.7567 {
+		typolink.parameter.data = leveluid:0
+		typolink.parameter.wrap = |,7567
+		typolink.forceAbsoluteUrl = 1
+		typolink.returnLast = url
+
+		wrap (
+			<link rel="search"
+				  type="application/opensearchdescription+xml"
+				  href="|"
+				  title="{$plugin.tx_solr.openSearch.shortName}"
+			/>
+		)
+	}
+}
+
+
+openSearch = PAGE
+openSearch {
+
+	typeNum = 7567
+
+	config {
+		disableAllHeaderCode = 1
+		additionalHeaders = Content-type:application/opensearchdescription+xml
+		xhtml_cleaning = 0
+		admPanel = 0
+	}
+
+	10 = TEXT
+	10.insertData = 1
+	10.value (
+<?xml version="1.0" encoding="UTF-8"?>
+<OpenSearchDescription xmlns="http://a9.com/-/spec/opensearch/1.1/">
+	<ShortName>{$plugin.tx_solr.openSearch.shortName}</ShortName>
+	<Description>{$plugin.tx_solr.openSearch.description}</Description>
+	<Image height="16" width="16" type="image/x-icon">{getIndpEnv:TYPO3_SITE_URL}favicon.ico</Image>
+	<InputEncoding>UTF-8</InputEncoding>
+	<OutputEncoding>UTF-8</OutputEncoding>
+
+)
+
+
+	# link to this description file for automatic updates
+	20 = TEXT
+	20.insertData = 1
+	20.value (
+	<Url type="application/opensearchdescription+xml"
+		 rel="self"
+		 template="{getIndpEnv:TYPO3_REQUEST_URL}" />
+	)
+
+
+	# link the search page
+	30 = TEXT
+	30.insertData = 1
+	30.value (
+	<Url type="text/html"
+		 method="GET"
+		 template="{getIndpEnv:TYPO3_SITE_URL}index.php?id={$plugin.tx_solr.search.targetPage}
+	)
+
+	31 = TEXT
+	31.value = tx_solr[q]
+	31.override = {$plugin.tx_solr.search.query.getParameter}
+	31.wrap = &amp;|={searchTerms}" />
+
+
+	# link to auto suggestion provider
+	40 = TEXT
+	40.insertData = 1
+	40.value (
+	<Url type="application/x-suggestions+json"
+		 rel="suggestions"
+		 template="{getIndpEnv:TYPO3_SITE_URL}index.php?id={$plugin.tx_solr.search.targetPage}&amp;eID=tx_solr_suggest&amp;format=OpenSearch
+	)
+
+	41 = TEXT
+	41.value = tx_solr[q]
+	41.override = {$plugin.tx_solr.search.query.getParameter}
+	41.wrap = &amp;|={searchTerms}" />
+
+	500 = TEXT
+	500.value (
+
+</OpenSearchDescription>
+	)
+
+}
